--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -438,6 +438,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Recipe\Create.cshtml" />
     <Content Include="Views\Recipe\Details.cshtml" />
+    <Content Include="Views\Shared\_LayoutPageForm.cshtml" />
+    <Content Include="Views\Shared\_LayoutPageGeneral.cshtml" />
+    <Content Include="Views\Shared\_LayoutPageRecipe.cshtml" />
+    <Content Include="Views\Shared\_LayoutPageSetting.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
