--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -379,6 +379,9 @@
     <Compile Include="Models\RECIPE.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RECIPE_INGREDS.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\USER.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
