--- a/CookingCurator/Web.config
+++ b/CookingCurator/Web.config
@@ -13,6 +13,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AdminEmail" value ="CookingCurator@gmail.com"/>
+    <add key="AdminPassword" value ="peQQ@4633"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
