--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -456,6 +456,8 @@
     <Content Include="Views\References\Index.cshtml" />
     <Content Include="Views\Recipe\CreateVerified.cshtml" />
     <Content Include="Views\Recipe\Create.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\Recipe\Authors.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
