--- a/CookingCurator/Web.config
+++ b/CookingCurator/Web.config
@@ -8,19 +8,34 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <membership defaultProvider="MySQLMembershipProvider">
       <providers>
         <remove name="MySQLMembershipProvider" />
-        <add applicationName="/" connectionStringName="LocalMySqlServer" enablePasswordReset="true" enablePasswordRetrieval="false" maxInvalidPasswordAttempts="5" minRequiredNonalphanumericCharacters="1" minRequiredPasswordLength="7" name="MySQLMembershipProvider" passwordAttemptWindow="10" passwordFormat="Clear" passwordStrengthRegularExpression="" requiresQuestionAndAnswer="true" requiresUniqueEmail="false" type="MySql.Web.Security.MySQLMembershipProvider, MySql.Web, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+        <add applicationName="/" 
+            connectionStringName="LocalMySqlServer" 
+             enablePasswordReset="true" 
+             enablePasswordRetrieval="false" 
+             maxInvalidPasswordAttempts="5" 
+             minRequiredNonalphanumericCharacters="1" 
+             minRequiredPasswordLength="7" 
+             name="MySQLMembershipProvider" 
+             passwordAttemptWindow="10" 
+             passwordFormat="Clear" 
+             passwordStrengthRegularExpression="" 
+             requiresQuestionAndAnswer="true" 
+             requiresUniqueEmail="false" 
+             type="MySql.Web.Security.MySQLMembershipProvider, MySql.Web, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
       </providers>
     </membership>
     <profile defaultProvider="MySQLProfileProvider">
@@ -50,6 +65,7 @@
       </personalization>
     </webParts>
   </system.web>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -134,23 +150,27 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <system.webServer>
     <modules>
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
   </system.webServer>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  
   <connectionStrings>
-    <remove name="LocalMySqlServer" />
-    <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" />
+    <remove name="LocalSqlServer" />
+    <add connectionString="LocalSqlServer" name="LocalSqlServer" providerName="MySql.Data.MySqlClient" />
     <add name="prj666_191a03Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -162,4 +182,6 @@
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
     </providers>
   </entityFramework>
+  
 </configuration>
+<!--ProjectGuid: 04AF1116-9567-4844-A2CD-7F94A37F1530-->
