--- a/CookingCurator/Web.config
+++ b/CookingCurator/Web.config
@@ -16,10 +16,14 @@
     <add key="AdminEmail" value="CookingCurator@gmail.com" />
     <add key="AdminPassword" value="peQQ@4633" />
     <add key="owin:AppStartup" value="CookingCurator.App_Start.IdentityConfig" />
+    <add key="PreserveLoginUrl" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Home/Login" defaultUrl="~/" timeout="20" slidingExpiration="true"/>
+    </authentication>
     <membership defaultProvider="MySQLMembershipProvider">
       <providers>
         <remove name="MySQLMembershipProvider" />
