--- a/CookingCurator/Web.config
+++ b/CookingCurator/Web.config
@@ -17,13 +17,23 @@
     <add key="AdminPassword" value="peQQ@4633" />
     <add key="owin:AppStartup" value="CookingCurator.App_Start.IdentityConfig" />
     <add key="PreserveLoginUrl" value="true" />
+    <add key="enableSimpleMembership" value="false"/>
+    <add key="autoFormsAuthentication" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Home/Login" defaultUrl="~/" timeout="20" slidingExpiration="true"/>
+      <forms loginUrl="~/Home/Login" defaultUrl="~/" timeout="20" slidingExpiration="true" />
     </authentication>
+    <!--
+    <roleManager enabled="true" defaultProvider="MySQLProvider">
+      <providers>
+        <clear/>
+        <add name="MySQLProvider" type="CookingCurator.Models.SiteRole"></add>
+      </providers>
+    </roleManager>
+    -->
     <membership defaultProvider="MySQLMembershipProvider">
       <providers>
         <remove name="MySQLMembershipProvider" />
@@ -36,10 +46,12 @@
         <add applicationName="/" connectionStringName="LocalMySqlServer" name="MySQLProfileProvider" type="MySql.Web.Profile.MySQLProfileProvider, MySql.Web, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
       </providers>
     </profile>
-    <roleManager defaultProvider="MySQLRoleProvider">
+    <roleManager enabled="true" defaultProvider="MySQLRoleProvider">
       <providers>
         <remove name="MySQLRoleProvider" />
         <add applicationName="/" connectionStringName="LocalMySqlServer" name="MySQLRoleProvider" type="MySql.Web.Security.MySQLRoleProvider, MySql.Web, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+        <clear/>
+        <add name="MySQLRoleProvider" type="CookingCurator.Models.SiteRole"></add>
       </providers>
     </roleManager>
     <siteMap defaultProvider="MySqlSiteMapProvider">
@@ -159,11 +171,7 @@
   </system.codedom>
   <connectionStrings>
     <remove name="LocalMySqlServer" />
-    <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" />
-    <add name="prj666_191a03Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="prj666_191a03Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="prj666_191a03Entities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" /><add name="prj666_191a03Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities3" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
