--- a/CookingCurator/Web.config
+++ b/CookingCurator/Web.config
@@ -17,8 +17,8 @@
     <add key="AdminPassword" value="peQQ@4633" />
     <add key="owin:AppStartup" value="CookingCurator.App_Start.IdentityConfig" />
     <add key="PreserveLoginUrl" value="true" />
-    <add key="enableSimpleMembership" value="false"/>
-    <add key="autoFormsAuthentication" value="false"/>
+    <add key="enableSimpleMembership" value="false" />
+    <add key="autoFormsAuthentication" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -50,7 +50,7 @@
       <providers>
         <remove name="MySQLRoleProvider" />
         <add applicationName="/" connectionStringName="LocalMySqlServer" name="MySQLRoleProvider" type="MySql.Web.Security.MySQLRoleProvider, MySql.Web, Version=8.0.14.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-        <clear/>
+        <clear />
         <add name="MySQLRoleProvider" type="CookingCurator.Models.SiteRole"></add>
       </providers>
     </roleManager>
@@ -171,7 +171,7 @@
   </system.codedom>
   <connectionStrings>
     <remove name="LocalMySqlServer" />
-    <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" /><add name="prj666_191a03Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities3" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" /><add name="prj666_191a03Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities3" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities4" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /><add name="prj666_191a03Entities5" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
