Accept waiver feature added

--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -379,6 +379,7 @@
     <Compile Include="EntityModels\RecipeSourceViewModel.cs" />
     <Compile Include="EntityModels\Recipe_IngredViewModel.cs" />
     <Compile Include="EntityModels\RegisterViewModel.cs" />
+    <Compile Include="EntityModels\UserAcceptWaiverViewModel.cs" />
     <Compile Include="EntityModels\UserBaseViewModel.cs" />
     <Compile Include="EntityModels\UserFindViewModel.cs" />
     <Compile Include="Global.asax.cs">
@@ -511,6 +512,7 @@
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\Home\VerifyAccount.cshtml" />
     <Content Include="Views\Home\RegisterationSuccess.cshtml" />
+    <Content Include="Views\Home\AcceptWaiver.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
