--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -372,6 +372,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="EntityModels\IngredientBaseViewModel.cs" />
     <Compile Include="EntityModels\ContactUsViewModel.cs" />
+    <Compile Include="EntityModels\IngredBaseViewModel.cs" />
     <Compile Include="EntityModels\LoginViewModel.cs" />
     <Compile Include="EntityModels\RecipeAddViewModel.cs" />
     <Compile Include="EntityModels\RecipeBaseViewModel.cs" />
@@ -492,6 +493,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Recipe\Details.cshtml" />
     <Content Include="Views\User\Search.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Recipe\Index.cshtml" />
@@ -502,15 +504,14 @@
     <Content Include="Views\References\Index.cshtml" />
     <Content Include="Views\Recipe\Delete.cshtml" />
     <Content Include="Views\Recipe\CreateVerified.cshtml" />
+    <Content Include="Views\Recipe\Create.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\Recipe\Authors.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
-    <Content Include="Views\Recipe\Details.cshtml" />
-    <Content Include="Views\Recipe\Create.cshtml" />
     <Content Include="Views\Home\VerifyAccount.cshtml" />
     <Content Include="Views\Home\RegisterationSuccess.cshtml" />
-
+    <Content Include="Views\Home\TestAcc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
