Production env changes

--- a/CookingCurator/Web.config
+++ b/CookingCurator/Web.config
@@ -189,8 +189,8 @@
   </system.codedom>
   
   <connectionStrings>
-    <remove name="LocalMySqlServer" />
-    <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" />
+    <remove name="LocalSqlServer" />
+    <add connectionString="LocalSqlServer" name="LocalSqlServer" providerName="MySql.Data.MySqlClient" />
     <add name="prj666_191a03Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
     <add name="prj666_191a03Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
     <add name="prj666_191a03Entities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mymysql.senecacollege.ca;user id=prj666_191a03;database=prj666_191a03;password=peQQ@4633;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
