Added the Set Diets and Set Allergies pages

--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -385,7 +385,9 @@
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="EntityModels\BookmarkViewModel.cs" />
+    <Compile Include="EntityModels\ChangeAllergiesViewModel.cs" />
     <Compile Include="EntityModels\ChangePasswordViewModel.cs" />
+    <Compile Include="EntityModels\ChangeDietsViewModel.cs" />
     <Compile Include="EntityModels\ChangeUsernameViewModel.cs" />
     <Compile Include="EntityModels\DietDescViewModel.cs" />
     <Compile Include="EntityModels\IngredientBaseViewModel.cs" />
@@ -564,6 +566,8 @@
     <Content Include="Views\Diet\Index.cshtml" />
     <Content Include="Views\Recipe\ReportedRecipe.cshtml" />
     <Content Include="Views\Recipe\ReportRecipe.cshtml" />
+    <Content Include="Views\Profile\ChangeDiets.cshtml" />
+    <Content Include="Views\Profile\ChangeAllergies.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
