--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -566,6 +566,7 @@
     <Content Include="Views\Diet\Index.cshtml" />
     <Content Include="Views\Recipe\ReportedRecipe.cshtml" />
     <Content Include="Views\Recipe\ReportRecipe.cshtml" />
+    <Content Include="Views\Home\DeleteAccount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
